force-app/main/default/objects/FF_Liability__c/fields/Custom_Provider_Name__c.field-meta.xml
<CustomField>
    <fullName>Custom_Provider_Name__c</fullName>
    <description>If the provider isn&apos;t one provided, this is a custom field to provide the name themselves.</description>
    <label>Custom provider name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>