force-app/main/default/objects/FF_Liability__c/fields/Deleted__c.field-meta.xml
<CustomField>
    <fullName>Deleted__c</fullName>
    <defaultValue>false</defaultValue>
    <description>A checkbox to see if this has been deleted or not. If checked then the liability has been deleted.</description>
    <label>Deleted</label>
    <type>Checkbox</type>
</CustomField>