force-app/main/default/objects/FF_Liability__c/fields/End_Date__c.field-meta.xml
<CustomField>
    <fullName>End_Date__c</fullName>
    <label>End Date/Year</label>
    <type>Date</type>
</CustomField>