force-app/main/default/objects/FF_Liability__c/fields/FF_Session__c.field-meta.xml
<CustomField>
    <fullName>FF_Session__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <description>A lookup to the specific fact find session this data was taken from.</description>
    <label>FF session</label>
    <referenceTo>FF_Session__c</referenceTo>
    <relationshipLabel>FF Liabilities</relationshipLabel>
    <relationshipName>FF_Liabilities</relationshipName>
    <type>Lookup</type>
</CustomField>