force-app/main/default/objects/FF_Liability__c/fields/Fixed_Rate_Expiry_Date__c.field-meta.xml
<CustomField>
    <fullName>Fixed_Rate_Expiry_Date__c</fullName>
    <description>The expiry date for any fixed rates associated with this liability.</description>
    <label>Fixed rate expiry date</label>
    <type>Date</type>
</CustomField>