force-app/main/default/objects/FF_Liability__c/fields/Initial_Balance__c.field-meta.xml
<CustomField>
    <fullName>Initial_Balance__c</fullName>
    <description>The initial value of this liability.</description>
    <label>Initial balance</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>