force-app/main/default/objects/FF_Liability__c/fields/Interest_Rate__c.field-meta.xml
<CustomField>
    <fullName>Interest_Rate__c</fullName>
    <description>The value of the interest rate associated with this liability.</description>
    <label>Interest rate</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>