force-app/main/default/objects/FF_Liability__c/fields/Joint_Owner__c.field-meta.xml
<CustomField>
    <fullName>Joint_Owner__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <description>A lookup to any joint owner for this liability.</description>
    <label>Joint owner</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>FF Liabilities (Joint Owner)</relationshipLabel>
    <relationshipName>FF_Liabilities_Joint_Owner</relationshipName>
    <type>Lookup</type>
</CustomField>