force-app/main/default/objects/FF_Liability__c/fields/Liability__c.field-meta.xml
<CustomField>
    <fullName>Liability__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <description>A lookup to the related liability.</description>
    <label>Liability</label>
    <referenceTo>Liabilities__c</referenceTo>
    <relationshipLabel>FF Liabilities</relationshipLabel>
    <relationshipName>FF_Liabilities</relationshipName>
    <type>Lookup</type>
</CustomField>