force-app/main/default/objects/FF_Liability__c/fields/Linked_Asset__c.field-meta.xml
<CustomField>
    <fullName>Linked_Asset__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>Linked asset (legacy)</label>
    <referenceTo>Assets__c</referenceTo>
    <relationshipLabel>FF Liabilities</relationshipLabel>
    <relationshipName>FF_Liabilities</relationshipName>
    <type>Lookup</type>
</CustomField>