force-app/main/default/objects/FF_Liability__c/fields/Linked_asset_match_id__c.field-meta.xml
<CustomField>
    <fullName>Linked_asset_match_id__c</fullName>
    <description>The match id of the linked asset. We will use this field when we don&#39;t have access to the linked asset sfid.</description>
    <label>Linked asset match id</label>
    <length>255</length>
    <type>Text</type>
</CustomField>