force-app/main/default/objects/FF_Liability__c/fields/LinkedAsset__c.field-meta.xml
<CustomField>
    <fullName>LinkedAsset__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <description>Linked to new version of asset.</description>
    <label>Linked asset (CheerIO)</label>
    <referenceTo>Asset__c</referenceTo>
    <relationshipLabel>Legacy FF Liabilities</relationshipLabel>
    <relationshipName>LegacyFFLiabilities</relationshipName>
    <type>Lookup</type>
</CustomField>