force-app/main/default/objects/FF_Liability__c/fields/Monthly_Payment__c.field-meta.xml
<CustomField>
    <fullName>Monthly_Payment__c</fullName>
    <description>The value of the monthly payment for this liability.</description>
    <label>Monthly payment</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>