force-app/main/default/objects/FF_Liability__c/fields/Mortgage_Type__c.field-meta.xml
<CustomField>
    <fullName>Mortgage_Type__c</fullName>
    <description>Define what type of mortgage this is, is it a repayment or interest only?</description>
    <label>Mortgage type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Interest Only</fullName>
            </value>
            <value>
                <fullName>Repayment</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>