force-app/main/default/objects/FF_Liability__c/fields/Primary_Owner__c.field-meta.xml
<CustomField>
    <fullName>Primary_Owner__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <description>A lookup to whoever the primary owner of this liability is.</description>
    <label>Primary owner</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>FF Liabilities (Primary Owner)</relationshipLabel>
    <relationshipName>FF_Liabilities</relationshipName>
    <type>Lookup</type>
</CustomField>