force-app/main/default/objects/FF_Liability__c/fields/Public_Provider_List__c.field-meta.xml
<CustomField>
    <fullName>Public_Provider_List__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <description>A lookup to the provider for this liability.</description>
    <label>Public provider name</label>
    <referenceTo>Public_Provider_Names__c</referenceTo>
    <relationshipLabel>FF Liabilities</relationshipLabel>
    <relationshipName>FF_Liabilities</relationshipName>
    <type>Lookup</type>
</CustomField>