force-app/main/default/objects/FF_Liability__c/fields/Type__c.field-meta.xml
<CustomField>
    <fullName>Type__c</fullName>
    <description>Choose what type of liability this is from a pre-defined list.</description>
    <label>Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Liability_Types</valueSetName>
    </valueSet>
</CustomField>