force-app/main/default/objects/FF_Liability__c/validationRules/linkedAssetsNotCreated.validationRule-meta.xml
<ValidationRule>
    <fullName>linkedAssetsNotCreated</fullName>
    <active>true</active>
    <errorConditionFormula>!$Setup.SystemConfiguration__c.ValidationBypass__c 
&amp;&amp;
AND(
ISPICKVAL(Validated__c, &quot;Validated&quot;), 
 NOT(ISBLANK(Linked_asset_match_id__c)), 
 ISBLANK(Linked_Asset__c)
)</errorConditionFormula>
    <errorMessage>This liability is linked to an asset. You need to validate all outstanding assets before you can validate this liability.</errorMessage>
</ValidationRule>