force-app/main/default/objects/FF_Liability__c/validationRules/Person_Accounts_Not_Created.validationRule-meta.xml
<ValidationRule>
    <fullName>Person_Accounts_Not_Created</fullName>
    <active>true</active>
    <errorConditionFormula>ISBLANK(Primary_Owner__c)</errorConditionFormula>
    <errorDisplayField>Primary_Owner__c</errorDisplayField>
    <errorMessage>The Primary Owner is missing. You need to validate all Person Account records which will then populate the primary Owner field.</errorMessage>
</ValidationRule>