force-app/main/default/objects/FF_Liability__c/validationRules/personAccountsNotCreated.validationRule-meta.xml
<ValidationRule>
    <fullName>personAccountsNotCreated</fullName>
    <active>true</active>
    <errorConditionFormula>!$Setup.SystemConfiguration__c.ValidationBypass__c 
&amp;&amp;
ISBLANK(Primary_Owner__c)</errorConditionFormula>
    <errorDisplayField>Primary_Owner__c</errorDisplayField>
    <errorMessage>The Primary Owner is missing. You need to validate all Person Account records which will then populate the primary Owner field.</errorMessage>
</ValidationRule>